force-app/main/default/objects/Exl_RelatedContraventions__c/Exl_RelatedContraventions__c.object-meta.xml
<CustomObject>
    <label>Related Contravention</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Related Exclusions</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Contraventions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>