force-app/main/default/objects/Exl_RelatedContraventions__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Case lookup to enable the  creation of multiple/single contravention(s) linked to a single case, when multiple/single exclusion(s) are picked.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Related_Contraventions</relationshipName>
    <type>Lookup</type>
</CustomField>