force-app/main/default/objects/Exl_RelatedContraventions__c/fields/Contravention__c.field-meta.xml
<CustomField>
    <fullName>Contravention__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The contravention lookup to enable the creation of multiple/single contravention(s) linked to a single case, when multiple/single exclusion(s) are picked.</description>
    <label>Exclusion</label>
    <referenceTo>Exl_Exclusion__c</referenceTo>
    <relationshipName>Related_Contraventions</relationshipName>
    <type>Lookup</type>
</CustomField>