force-app/main/default/objects/Exl_RelatedContraventions__c/fields/POE_Type__c.field-meta.xml
<CustomField>
    <fullName>POE_Type__c</fullName>
    <formula>TEXT(Contravention__r.POE_Type__c)</formula>
    <label>POE Type</label>
    <type>Text</type>
</CustomField>